fix content of video not wrapping if to long

--- a/services/client/app/globals.css
+++ b/services/client/app/globals.css
@@ -56,3 +56,17 @@ body {
     animation: none !important;
 }
 
+.markdown > * {
+    all: revert;
+}
+
+.markdown {
+    max-width: 50rem;
+}
+
+.markdown pre,
+.markdown code,
+.markdown p {
+    overflow-wrap: break-word;
+    word-break: break-all;
+}
